@@ -50,7 +50,7 @@ void MainObject::ScheduleAutoRotation()
     }
     main_auto_rotate_timer->start(msecs);
     syslog(LOG_DEBUG,"next auto rotation scheduled for %s",
-	   (const char *)now.time().addMSecs(msecs).
+	   (const char *)now.addSecs(msecs/1000).
 	   toString("hh:mm:ss").toAscii());
   }
 }
@@ -168,8 +168,10 @@ void MainObject::PurgeBinlogs()
 	  }
 	}
       }
-      delete q;
-      CloseMysql();
+      else {
+	delete q;
+	CloseMysql();
+      }
     }
   }
 }
